Added FSM AI for AMA character. Made CAmanda a copy of SupplyShip, Added dummy cross object for testing.

--- a/Levels/Level_0.html
+++ b/Levels/Level_0.html
@@ -24,10 +24,6 @@
     </CHARACTER>
 
     <CHARACTER>
-        <NAME>AMANDA</NAME>
-    </CHARACTER>
-
-    <CHARACTER>
         <NAME>CIRCLESHIP</NAME>
         <VELOCITY>0.001</VELOCITY>
         <RADIO>1</RADIO>
@@ -47,6 +43,15 @@
 
     <CHARACTER>
         <NAME>SUPPLYSHIP</NAME>
+        <SPEED>
+            <X>0.001</X>	<!--in units per milisecond-->
+            <Y>0.0</Y>
+            <Z>0.0</Z>
+        </SPEED>
+    </CHARACTER>
+
+    <CHARACTER>
+        <NAME>AMANDA</NAME>
         <SPEED>
             <X>0.001</X>	<!--in units per milisecond-->
             <Y>0.0</Y>
