I implemented 3 attacks and teleport, but the general shooting only works when my character is dead.

--- a/Levels/Level_0.html
+++ b/Levels/Level_0.html
@@ -52,8 +52,9 @@
 
     <CHARACTER>
         <NAME>AMANDA</NAME>
+        <HEALTH>20</HEALTH>
         <SPEED>
-            <X>0.001</X>	<!--in units per milisecond-->
+            <X>0.004</X>	<!--in units per milisecond-->
             <Y>0.0</Y>
             <Z>0.0</Z>
         </SPEED>
