--- a/configuration/Initialization.html
+++ b/configuration/Initialization.html
@@ -66,12 +66,16 @@
         <NAME>AMANDA</NAME>
         <EXPLOSION>500</EXPLOSION>	    <!-- Miliseconds this explosion lasts -->
         <HEALTH>500</HEALTH>
-        <MESH>cross.3ds</MESH>
+        <MESH>amanda.3ds</MESH>
+        <SHIELD>0</SHIELD>
+        <SPECIALATTACK>0</SPECIALATTACK>
+        <TELEPORT>12</TELEPORT>
         <TEXTURE3D>f02_512.bmp</TEXTURE3D>
         <TEXTURE2D>supplyship.bmp</TEXTURE2D>
+        <THREEATTACKS>0</THREEATTACKS>
         <SPEED>
-            <X>0.002</X>	<!--in units per milisecond-->
-            <Y>0.0</Y>
+            <X>0.08</X>	<!--in units per milisecond-->
+            <Y>0.02</Y>
             <Z>0.0</Z>
         </SPEED>
     </CHARACTER>
